# oscar-sinfo-data

./: .gitignore  Cargo.toml  README.md
data/: oscar.csv
scripts/: data_to_github.sh  sql_to_csv.sh
src/: database.rs  main.rs  sinfo.rs
src/sql/: create_cpu_table.sql  insert_cpu.sql
