[package]
name = "oscar_util"
version = "0.1.0"
authors = ["Paul Stey <paulstey@gmail>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "5.0.1"
sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1.2.0", features = [ "full" ]}
